[gd_scene load_steps=80 format=3 uid="uid://bwjpugcetxvgh"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_0jgvd"]
[ext_resource type="Texture2D" uid="uid://gso23o6hhygk" path="res://Assets/playersprites/MaleMC-Front.png" id="2_01kor"]
[ext_resource type="Texture2D" uid="uid://25gkkssijggq" path="res://Assets/playersprites/MaleMC-Side.png" id="3_75swo"]
[ext_resource type="Texture2D" uid="uid://b7arjwpsrjb31" path="res://Assets/playersprites/MaleMC-Back.png" id="4_gtjpv"]
[ext_resource type="Texture2D" uid="uid://cyl6ovgce6371" path="res://Assets/playersprites/ML-damaged_and_death.png" id="5_7nosd"]
[ext_resource type="AudioStream" uid="uid://mrxi85vqyjk7" path="res://Assets/music/613217__flammos__rough-trerrain-grass-soft-23.wav" id="6_ia7nv"]
[ext_resource type="AudioStream" uid="uid://rpj3j2d6im10" path="res://Assets/music/641897__colorscrimsontears__light-magic-rpg-1.wav" id="7_85o14"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6svw"]
bg_color = Color(0.239216, 0.258824, 0.309804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.482353, 0.356863, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3vdj"]
bg_color = Color(0.705882, 0.262745, 0.278431, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.482353, 0.356863, 0.14902, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_go2fs"]
radius = 5.0
height = 34.0

[sub_resource type="AtlasTexture" id="AtlasTexture_otl86"]
atlas = ExtResource("2_01kor")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_iliwf"]
atlas = ExtResource("2_01kor")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qx6l"]
atlas = ExtResource("2_01kor")
region = Rect2(96, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_d50ba"]
atlas = ExtResource("2_01kor")
region = Rect2(144, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kmr"]
atlas = ExtResource("2_01kor")
region = Rect2(192, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g2nn"]
atlas = ExtResource("2_01kor")
region = Rect2(240, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_swmny"]
atlas = ExtResource("3_75swo")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvnlj"]
atlas = ExtResource("3_75swo")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpfvo"]
atlas = ExtResource("3_75swo")
region = Rect2(96, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnqm2"]
atlas = ExtResource("3_75swo")
region = Rect2(144, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5356"]
atlas = ExtResource("3_75swo")
region = Rect2(192, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwlfx"]
atlas = ExtResource("3_75swo")
region = Rect2(240, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fm3q"]
atlas = ExtResource("4_gtjpv")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_by3qf"]
atlas = ExtResource("4_gtjpv")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1k2e"]
atlas = ExtResource("4_gtjpv")
region = Rect2(96, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_00m1n"]
atlas = ExtResource("4_gtjpv")
region = Rect2(144, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyk2a"]
atlas = ExtResource("4_gtjpv")
region = Rect2(192, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q40d"]
atlas = ExtResource("4_gtjpv")
region = Rect2(240, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnjpx"]
atlas = ExtResource("5_7nosd")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2qm7"]
atlas = ExtResource("5_7nosd")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctoop"]
atlas = ExtResource("5_7nosd")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8hee"]
atlas = ExtResource("5_7nosd")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gc2a"]
atlas = ExtResource("5_7nosd")
region = Rect2(0, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmaxm"]
atlas = ExtResource("5_7nosd")
region = Rect2(48, 88, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vee8p"]
atlas = ExtResource("2_01kor")
region = Rect2(0, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_clg57"]
atlas = ExtResource("2_01kor")
region = Rect2(48, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ih6q"]
atlas = ExtResource("2_01kor")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk1ft"]
atlas = ExtResource("2_01kor")
region = Rect2(144, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktl12"]
atlas = ExtResource("2_01kor")
region = Rect2(192, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_51b87"]
atlas = ExtResource("2_01kor")
region = Rect2(240, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpisw"]
atlas = ExtResource("3_75swo")
region = Rect2(0, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bttbf"]
atlas = ExtResource("3_75swo")
region = Rect2(48, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_250lt"]
atlas = ExtResource("3_75swo")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_743jn"]
atlas = ExtResource("3_75swo")
region = Rect2(144, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fpk1"]
atlas = ExtResource("3_75swo")
region = Rect2(192, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_re7ao"]
atlas = ExtResource("3_75swo")
region = Rect2(240, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8mm6"]
atlas = ExtResource("4_gtjpv")
region = Rect2(0, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxf8w"]
atlas = ExtResource("4_gtjpv")
region = Rect2(48, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tautt"]
atlas = ExtResource("4_gtjpv")
region = Rect2(96, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjb5"]
atlas = ExtResource("4_gtjpv")
region = Rect2(144, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bfrh"]
atlas = ExtResource("4_gtjpv")
region = Rect2(192, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_el5y7"]
atlas = ExtResource("4_gtjpv")
region = Rect2(240, 0, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4pxl"]
atlas = ExtResource("2_01kor")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb22n"]
atlas = ExtResource("2_01kor")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft3ac"]
atlas = ExtResource("2_01kor")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_w68wi"]
atlas = ExtResource("2_01kor")
region = Rect2(144, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht0id"]
atlas = ExtResource("2_01kor")
region = Rect2(192, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qyy7"]
atlas = ExtResource("2_01kor")
region = Rect2(240, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1d3i"]
atlas = ExtResource("2_01kor")
region = Rect2(288, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ct6"]
atlas = ExtResource("2_01kor")
region = Rect2(336, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_yascn"]
atlas = ExtResource("3_75swo")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_m665x"]
atlas = ExtResource("3_75swo")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_42jbs"]
atlas = ExtResource("3_75swo")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpihh"]
atlas = ExtResource("3_75swo")
region = Rect2(144, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5hec"]
atlas = ExtResource("3_75swo")
region = Rect2(192, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmcuy"]
atlas = ExtResource("3_75swo")
region = Rect2(240, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdoj6"]
atlas = ExtResource("3_75swo")
region = Rect2(288, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnt5o"]
atlas = ExtResource("3_75swo")
region = Rect2(336, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yj15"]
atlas = ExtResource("4_gtjpv")
region = Rect2(0, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkwo"]
atlas = ExtResource("4_gtjpv")
region = Rect2(48, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_720e5"]
atlas = ExtResource("4_gtjpv")
region = Rect2(96, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvp8p"]
atlas = ExtResource("4_gtjpv")
region = Rect2(144, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3q7c"]
atlas = ExtResource("4_gtjpv")
region = Rect2(192, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb65o"]
atlas = ExtResource("4_gtjpv")
region = Rect2(240, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbp3f"]
atlas = ExtResource("4_gtjpv")
region = Rect2(288, 44, 48, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnw0f"]
atlas = ExtResource("4_gtjpv")
region = Rect2(336, 44, 48, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2eh5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_otl86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iliwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qx6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d50ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g2nn")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swmny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvnlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpfvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnqm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5356")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwlfx")
}],
"loop": false,
"name": &"attack_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fm3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by3qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1k2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00m1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyk2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q40d")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnjpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2qm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctoop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8hee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gc2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmaxm")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vee8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clg57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ih6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk1ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktl12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51b87")
}],
"loop": true,
"name": &"idle_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpisw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bttbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_250lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_743jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fpk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re7ao")
}],
"loop": true,
"name": &"idle_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8mm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxf8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tautt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrjb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bfrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el5y7")
}],
"loop": true,
"name": &"idle_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4pxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb22n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft3ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w68wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht0id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qyy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1d3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ct6")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yascn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m665x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42jbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpihh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5hec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmcuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdoj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnt5o")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yj15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_720e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvp8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3q7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb65o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbp3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnw0f")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cnex"]
size = Vector2(23, 43)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e1mpb"]
height = 34.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_0jgvd")

[node name="HP" type="ProgressBar" parent="."]
offset_left = -136.0
offset_top = 55.0
offset_right = 137.0
offset_bottom = 60.0
theme_override_styles/background = SubResource("StyleBoxFlat_t6svw")
theme_override_styles/fill = SubResource("StyleBoxFlat_i3vdj")
value = 50.0
show_percentage = false

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_go2fs")

[node name="sprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e2eh5")
animation = &"death"

[node name="cam" type="Camera2D" parent="."]

[node name="DealDamageZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamageZone"]
position = Vector2(5.5, -1.5)
shape = SubResource("RectangleShape2D_2cnex")

[node name="PlayerHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
shape = SubResource("CapsuleShape2D_e1mpb")

[node name="sfx_walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ia7nv")
volume_db = -20.0

[node name="sfx_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_85o14")
volume_db = -30.0

[connection signal="animation_finished" from="sprites" to="." method="_on_animated_sprite_2d_animation_finished"]
